# genetic_algorithms

./: CMakeLists.txt  README.md  config.hpp  functions.cpp  main.cpp  visualization.py
inc/: functions.hpp  ga_double.hpp  ga_double_bit.hpp  ga_int.hpp  random.hpp  time.hpp
lib/: functions.cpp  ga_double.cpp  ga_double_bit.cpp  ga_int.cpp  random.cpp
